Inicio crud sucursal

--- a/src/app/private/pages/layout/layout.component.html
+++ b/src/app/private/pages/layout/layout.component.html
@@ -74,7 +74,9 @@
             </div>
         </div>
     </section>
-    <section>
-        <router-outlet></router-outlet>
+    <section style="width: 100%; display: flex; justify-content: center;">
+        <section style="width: 80%;" class="pt-4">
+            <router-outlet></router-outlet>
+        </section>
     </section>
 </section>
