--- a/src/app/private/pages/sucursal/sucursal.component.html
+++ b/src/app/private/pages/sucursal/sucursal.component.html
@@ -1,1 +1,25 @@
-<p>sucursal works!</p>
+<div class="container-fluid">
+    <section>
+        <h1>Sucursal</h1>
+        <hr>
+    </section>
+    <section>
+        <div class="row g-2 d-flex justify-content-between">
+            <div class="col-6">
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="sucursal" placeholder="Nombre...">
+                    <label for="sucursal">Nombre...</label>
+                </div>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <button class="btn" style="height: 58px; width:  58px; background-color: var(--color-principal);">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        style="color: var(--color-terciario);" class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </section>
+</div>
