--- a/src/app/private/pages/layout/layout.component.html
+++ b/src/app/private/pages/layout/layout.component.html
@@ -2,38 +2,27 @@
     class="justify-content-between d-flex">
     <section id="btn_desplegar" class="d-flex align-items-center">
         <button id="btn_menu" class="btn" (click)="toggleMenu()">
-            <svg style="color: var(--color-terciario);" xmlns="http://www.w3.org/2000/svg" width="20"
-                fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
-            </svg>
+            <i class="bi bi-list" style="color: var(--color-terciario);"></i>
         </button>
     </section>
     <section id="info_usuario" class="d-flex align-items-center position-relative">
         <button id="btn_menu" class="btn" (click)="ToggleUsuario()">
-            <svg style="color: var(--color-terciario);" xmlns="http://www.w3.org/2000/svg" width="24"
-                fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                <path
-                    d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
-            </svg>
+            <i class="bi bi-person" style="font-size: 24px; color: var(--color-terciario);"></i>
         </button>
         <section id="user_menu" *ngIf="mostrarUsuario" class="informacion-usuario bubble">
             <section>
-                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor"
-                    class="bi bi-person-square" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                    <path
-                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
-                </svg>
+                <i class="bi bi-person-square" style="font-size: 64px;"></i>
                 <hr>
                 <p>
                     <strong>
-                        {{this.infoUsuario.nombre}} {{this.infoUsuario.apellidoPaterno}} {{this.infoUsuario.apellidoMaterno}}
+                        {{this.infoUsuario.nombre}} {{this.infoUsuario.apellidoPaterno}}
+                        {{this.infoUsuario.apellidoMaterno}}
                     </strong>
                     <br>
                     {{this.infoUsuario.nombreRol}}
                 </p>
-                <button class="btn" style="background-color: var(--color-principal); color: var(--color-terciario);" (click)="CerrarSesion()">
+                <button class="btn" style="background-color: var(--color-principal); color: var(--color-terciario);"
+                    (click)="CerrarSesion()">
                     Cerrar Sesión
                 </button>
             </section>
@@ -61,11 +50,7 @@
                             class="btn_hijo btn d-inline-flex" role="button"
                             style="width: 100%; margin: 0; padding: 0 10px;" [routerLink]="itemHijo.ruta">
                             <p style="margin: 0; height: 40px; display: flex; align-items: center;">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-right: 8px;">
-                                    <path fill-rule="evenodd"
-                                        d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
-                                </svg>
+                                <i class="bi bi-caret-right-fill"></i>
                                 {{itemHijo.nombre}}
                             </p>
                         </button>
