--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,30 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+
+html {
+  @include mat.theme((color: (theme-type: light,
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    ));
+}
+
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --color-principal: #DD0B14;
-    --color-secundario: #FFB71C;
-    --color-terciario: #ECE2E1; 
+  --color-principal: #DD0B14;
+  --color-secundario: #FFB71C;
+  --color-terciario: #ECE2E1;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
