--- a/src/app/private/pages/personal/personal.component.html
+++ b/src/app/private/pages/personal/personal.component.html
@@ -5,16 +5,43 @@
     </section>
     <form [formGroup]="formulario">
         <div class="row g-2 d-flex justify-content-between">
-            <div class="col-xs-4 col-sm-8 col-md-6 col-xl-6">
+            <div class="col-xs-4 col-sm-6 col-md-6 col-xl-2">
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="sucursal" placeholder="Nombre..."
-                        formControlName="sucursal">
-                    <label for="sucursal">Nombre...</label>
+                    <input type="text" class="form-control" id="codigo" placeholder="Codigo de personal..."
+                        formControlName="codPersonal">
+                    <label for="codigo">Codigo personal...</label>
                 </div>
             </div>
-            <div class="col-xs-4 col-sm-2 col-md-6 col-xl-6 d-flex justify-content-end">
-                <button (click)="null" class="btn"
-                    style="height: 58px; width:  58px; background-color: var(--color-principal);">
+            <div class="col-xs-4 col-sm-6 col-md-6 col-xl-3">
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="nroDocu" placeholder="Numero de documento..."
+                        formControlName="nroDoru">
+                    <label for="nroDocu">Numero de documento...</label>
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-6 col-md-6 col-xl-3">
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="nombre" placeholder="Nombre..."
+                        formControlName="nombre">
+                    <label for="nroDocu">Nombre...</label>
+                </div>
+            </div>
+            <div class="col-xs-4 col-sm-6 col-md-5 col-xl-3">
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="rol" placeholder="Rol..." formControlName="rol"
+                        (keyup)="ObtenerRoles()">
+                    <label for="rol">Rol...</label>
+                </div>
+                <ul class="list-group" style="z-index: 999;"
+                    *ngIf="this.Roles.length > 0 && this.formulario.get('rol')?.value.length > 0 && this.rolSeleccionado.id == null">
+                    <li class="list-group-item" *ngFor="let item of this.Roles"
+                        (click)="this.setearRolSeleccionado(item)">
+                        {{item.nombre}}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-xs-4 col-sm-12 col-md-1 col-xl-1 d-flex justify-content-end">
+                <button (click)="obtenerPersonal()" class="btn btn-buscar">
                     <i class="bi bi-search" style="color: var(--color-terciario); font-size: 20px;"></i>
                 </button>
             </div>
@@ -22,7 +49,7 @@
     </form>
     <section class="row g-2 mt-3">
         <div class="d-flex justify-content-end">
-            <button class="btn" (click)="null"
+            <button class="btn" (click)="AgregarPersonal()"
                 style="background-color: var(--color-principal); color: var(--color-terciario);">
                 <i class="bi bi-plus"></i>
                 Agregar
@@ -30,11 +57,11 @@
         </div>
     </section>
     <section>
-        <div class="mat-elevation-z8">
+        <div class="mat-elevation-z8" style="overflow-x: auto;">
             <table mat-table [dataSource]="dataSource">
                 <ng-container matColumnDef="Nro">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
-                    <td mat-cell *matCellDef="let element"> {{Sucursales.indexOf(element) + 1}} </td>
+                    <td mat-cell *matCellDef="let element"> {{Personales.indexOf(element) + 1}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Id">
@@ -42,9 +69,14 @@
                     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="CodSuc">
-                    <th mat-header-cell *matHeaderCellDef> Codigo Sucursal </th>
-                    <td mat-cell *matCellDef="let element"> {{element.codigoSucursal}} </td>
+                <ng-container matColumnDef="TipoDoc">
+                    <th mat-header-cell *matHeaderCellDef> Tipo Documento </th>
+                    <td mat-cell *matCellDef="let element"> {{element.tipoDocumento}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="NumDoc">
+                    <th mat-header-cell *matHeaderCellDef> Numero Documento </th>
+                    <td mat-cell *matCellDef="let element"> {{element.numeroDocumento}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Nombre">
@@ -52,26 +84,14 @@
                     <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="Direcc">
-                    <th mat-header-cell *matHeaderCellDef> Dirección </th>
-                    <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
-                </ng-container>
-
                 <ng-container matColumnDef="Telef">
                     <th mat-header-cell *matHeaderCellDef> Telefono </th>
                     <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="HoraEntr">
-                    <th mat-header-cell *matHeaderCellDef> Hora Entrada </th>
-                    <td mat-cell *matCellDef="let element"> {{ (element.horaEntrada) | date: 'shortTime' }}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="HoraSal">
-                    <th mat-header-cell *matHeaderCellDef> Hora Salida </th>
-                    <td mat-cell *matCellDef="let element"> {{ (element.horaSalida) | date: 'shortTime' }}
-                    </td>
+                <ng-container matColumnDef="Correo">
+                    <th mat-header-cell *matHeaderCellDef> Correo </th>
+                    <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Estado">
@@ -79,23 +99,28 @@
                     <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="Respo">
-                    <th mat-header-cell *matHeaderCellDef> Responsable </th>
-                    <td mat-cell *matCellDef="let element"> {{element.responsable}} </td>
+                <ng-container matColumnDef="Rol">
+                    <th mat-header-cell *matHeaderCellDef> Rol </th>
+                    <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Sucursal">
+                    <th mat-header-cell *matHeaderCellDef> Sucursal </th>
+                    <td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Accion">
                     <th mat-header-cell *matHeaderCellDef> Acciones </th>
                     <td mat-cell *matCellDef="let element">
-                        <button class="btn" (click)="null" title="Asignar Responsable"
+                        <button class="btn" (click)="AsignarReponsableSede(element.id)" title="Asignar Responsable"
                             style="background-color: var(--color-principal); color: var(--color-terciario);">
                             <i class="bi bi-file-person-fill"></i>
                         </button>
-                        <button class="btn m-1" (click)="(element.id)" title="Editar"
+                        <button class="btn m-1" (click)="EditarPersonal(element.id)" title="Editar"
                             style="background-color: var(--color-principal); color: var(--color-terciario);">
                             <i class="bi bi-pencil-square"></i>
                         </button>
-                        <button class="btn" (click)="(element.id)" title="Eliminar"
+                        <button class="btn" (click)="EliminarPersonal(element.id)" title="Eliminar"
                             style="background-color: var(--color-principal); color: var(--color-terciario);">
                             <i class="bi bi-trash"></i>
                         </button>
