--- a/src/app/private/pages/sucursal/sucursal.component.html
+++ b/src/app/private/pages/sucursal/sucursal.component.html
@@ -30,7 +30,7 @@
         </div>
     </section>
     <section>
-        <div class="mat-elevation-z8">
+        <div class="mat-elevation-z8" style="overflow-x: auto;">
             <table mat-table [dataSource]="dataSource">
                 <ng-container matColumnDef="Nro">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -87,10 +87,6 @@
                 <ng-container matColumnDef="Accion">
                     <th mat-header-cell *matHeaderCellDef> Acciones </th>
                     <td mat-cell *matCellDef="let element">
-                        <button class="btn" (click)="null" title="Asignar Responsable"
-                            style="background-color: var(--color-principal); color: var(--color-terciario);">
-                            <i class="bi bi-file-person-fill"></i>
-                        </button>
                         <button class="btn m-1" (click)="EditarSucursal(element.id)" title="Editar"
                             style="background-color: var(--color-principal); color: var(--color-terciario);">
                             <i class="bi bi-pencil-square"></i>
