--- a/src/app/private/pages/personal/agregar-editar-personal/agregar-editar-personal.component.html
+++ b/src/app/private/pages/personal/agregar-editar-personal/agregar-editar-personal.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">{{this.titulo}} Sucursal</h2>
+                <h2 class="modal-title">{{this.titulo}} Personal</h2>
                 <button type="button" class="btn-close" (click)="CerrarModal()"></button>
             </div>
             <div class="modal-body">
@@ -64,29 +64,25 @@
                     <div class="mb-3 row">
                         <label for="rol" class="col-sm-3 col-form-label">Rol: </label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="rol" formControlName="rol"
-                                (keyup)="ObtenerRoles()">
-                            <ul class="list-group" style="z-index: 999; position: absolute;"
-                                *ngIf="this.Roles.length > 0 && this.formulario.get('rol')?.value.length > 0 && this.rolSeleccionado.id == null">
-                                <li class="list-group-item" *ngFor="let item of this.Roles"
-                                    (click)="this.setearRolSeleccionado(item)">
-                                    {{item.nombre}}
-                                </li>
-                            </ul>
+                            <select class="form-select" formControlName="rol" id="rol" id="floatingSelect"
+                                aria-label="Floating label select example">
+                                <option value="0" disabled selected>Seleccione</option>
+                                <option *ngFor="let rol of this.Roles" value="{{rol.id}}">
+                                    {{rol.nombre}}
+                                </option>
+                            </select>
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label for="rol" class="col-sm-3 col-form-label">Sucursal: </label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="menuRol" formControlName="sucursal"
-                                (keyup)="ObtenerSucursal()">
-                            <ul class="list-group col-sm-8" style="z-index: 999; position: absolute;"
-                                *ngIf="sucursal.length > 0 && formulario.get('sucursal')?.value.length > 0 && this.sucursalSeleccionado.id == null">
-                                <li class="list-group-item" *ngFor="let item of sucursal"
-                                    (click)="setearSucursalSeleccionado(item)">
-                                    {{item.nombre}}
-                                </li>
-                            </ul>
+                            <select class="form-select" formControlName="sucursal" id="rol" id="floatingSelect"
+                                aria-label="Floating label select example">
+                                <option value="0" disabled selected>Seleccione</option>
+                                <option *ngFor="let sucursal of this.Sucursales" value="{{sucursal.id}}">
+                                    {{sucursal.nombre}}
+                                </option>
+                            </select>
                         </div>
                     </div>
                 </form>
