--- a/src/app/private/pages/layout/layout.component.scss
+++ b/src/app/private/pages/layout/layout.component.scss
@@ -1,26 +1,31 @@
-.seleccionado {
-    background-color: var(--color-principal);
-    color: var(--color-terciario);
-    list-style: square;
-}
+// .seleccionado {
+//     background-color: var(--color-principal);
+//     color: var(--color-terciario);
+//     list-style: square;
+// }
 
-#navBar {
-    transition: transform 0.9s ease-in-out, opacity 0.9s ease-in-out;
-}
+// #navBar {
+//     transition: transform 0.9s ease-in-out, opacity 0.9s ease-in-out;
+// }
 
-.informacion-usuario {
-    width: 30vh;
-    background-color: var(--color-terciario);
-    position: absolute;
-    top: 80%;
-    transform: translateX(-85%);
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 10px;
-    z-index: 1000;
+// .informacion-usuario {
+//     width: 30vh;
+//     background-color: var(--color-terciario);
+//     position: absolute;
+//     top: 80%;
+//     transform: translateX(-85%);
+//     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+//     border-radius: 8px;
+//     padding: 10px;
+//     z-index: 1000;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     text-align: center;
+// }
+
+.bg-primary
+{
+    background-color: var(--color-principal) !important;
 }
