--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 
 html {
   @include mat.theme((color: (theme-type: light,
-        primary: mat.$red-palette,
+        primary: mat.$azure-palette,
         tertiary: mat.$blue-palette,
       ),
       typography: Roboto,
@@ -21,7 +21,7 @@ html {
 
 html,
 body {
-  height: 100dvh;
+  height: 100%;
 }
 
 body {
