update: erase microsoft edge reveal btn input

--- a/src/app/public/pages/login/login.component.scss
+++ b/src/app/public/pages/login/login.component.scss
@@ -39,3 +39,9 @@ button[type="submit"]
     color: white;
     border: none;
 }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear
+{
+    display: none;
+}
